--- a/fffff/postgres-deploy.yaml
+++ b/fffff/postgres-deploy.yaml
@@ -24,6 +24,10 @@ spec:
       containers:
       - name: postgres
         image: postgres:12
+        resources:
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
         env:
         - name: POSTGRES_PASSWORD
           valueFrom:
